whitespace fixed

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,3 +1,9 @@
+.foot {
+  background-color: #131313;
+  width: 100%;
+  height: auto;
+}
+
 .svgsocial {
   color: white;
   font-size: 18px !important;
@@ -17,8 +23,6 @@
 
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
   .footer-cont {
-    width: 100% !important;
-    height: 100% !important;
     padding: 50px 20px !important;
   }
 
@@ -39,8 +43,6 @@
   }
 
   .footer-cont {
-    width: 100% !important;
-    height: 100% !important;
     padding: 50px 20px !important;
   }
 }
@@ -48,8 +50,6 @@
 @media only screen and (min-width: 430px) and (max-width: 768px) {
   .footer-cont {
     overflow: hidden;
-    width: 100% !important;
-    height: 100% !important;
   }
 
   .footer-item-container {
@@ -63,8 +63,6 @@
 
 @media only screen and (min-width: 300px) and (max-width: 430px) {
   .footer-cont {
-    width: 100% !important;
-    height: 100% !important;
     padding: 10px 10px;
   }
 
